# SkyContest_Template_OpenGL

./: CMakeLists.txt  README.md  main.cpp
assets/: fragment.glsl  vertex.glsl
